testing alt implementation and reconfiguring pom